--- a/package.json
+++ b/package.json
@@ -10,5 +10,16 @@
     "auth"
   ],
   "author": "Edwin Ismail",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt": "^3.0.3",
+    "concurrent": "^0.3.2",
+    "config": "^3.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.4.1"
+  }
 }
